Project generator Fix: Errors during project generation when includeModule('webDeploy')

--- a/Tools/projectGenerator/libs/Torque3D.conf
+++ b/Tools/projectGenerator/libs/Torque3D.conf
@@ -220,7 +220,7 @@ beginSharedAppConfig( getGameProjectName(), '{CDECDFF9-E125-523F-87BC-2D89DB971C
     if (TorqueGenerator::$platform == "win32")
     {
         addProjectDefine( 'WIN32' );
-        addProjectDependency( getGameProjectName() . ' DLL' );
+        addProjectDependency( getGameProjectName() . '_DLL' );
     }
 
     if (TorqueGenerator::$platform == "mac")
@@ -241,7 +241,7 @@ if ( !$useSharedConfig )
    
    addSolutionProjectRef( getGameProjectName() );
    if ( $useSharedConfig )
-      addSolutionProjectRef( getGameProjectName() . ' DLL' );
+      addSolutionProjectRef( getGameProjectName() . '_DLL' );
    addSolutionProjectRef( 'collada_dom' );
    addSolutionProjectRef( 'ljpeg' );
    addSolutionProjectRef( 'lmng' );
