--- a/Tools/projectGenerator/libs/WebDeploy.conf
+++ b/Tools/projectGenerator/libs/WebDeploy.conf
@@ -38,14 +38,14 @@ if (TorqueGenerator::$platform == "win32")
 
     beginActiveXConfig( WebDeploymentWindows::$axPluginName, '{CDECDFF9-E125-412E-87CD-2D89DB971CAB}' );
 
-        addProjectDependency( getGameProjectName() . ' DLL' );
+        addProjectDependency( getGameProjectName() . '_DLL' );
 
     endActiveXConfig();
 
 
     beginNPPluginConfig( WebDeploymentWindows::$npPluginName, '{CDECDFF9-E125-412E-87BC-2D89DB971CAB}' );
         
-       addProjectDependency( getGameProjectName() . ' DLL' );
+       addProjectDependency( getGameProjectName() . '_DLL' );
 
     endNPPluginConfig();
     
