Update main project buildFiles/config files.

--- a/My Projects/main/buildFiles/config/project.mac.conf
+++ b/My Projects/main/buildFiles/config/project.mac.conf
@@ -1,7 +1,7 @@
 <?php
 
 // Configure Torque 3D
-Torque3D::beginConfig( "mac", "Alux3D" );
+Torque3D::beginConfig( "mac", "notc" );
 
     // Include Web Deployment module
     includeModule( 'webDeploy' );
