--- a/My Projects/main/buildFiles/config/project.conf
+++ b/My Projects/main/buildFiles/config/project.conf
@@ -15,6 +15,7 @@ $TORQUE_EXTENDED_MOVE = false;
 Torque3D::beginConfig( "win32", "notc" );
 
     // Include Web Deployment module
+    includeModule( 'webDeploy' );
         
     // Enable for optional minidump debugging support
     // addProjectDefine( 'TORQUE_MINIDUMP' );
