improved config format, eaiser to be used now

--- a/Tools/CMake/torqueConfig.h.in
+++ b/Tools/CMake/torqueConfig.h.in
@@ -31,7 +31,7 @@
 //not only to your game proper, but also to all of your tools.
 
 /// What's the name of your application? Used in a variety of places.
-#define TORQUE_APP_NAME            "Empty"
+#define TORQUE_APP_NAME            "@TORQUE_APP_NAME@"
 
 /// What version of the application specific source code is this?
 ///
