enforced setting the app name and fixed default-appname bugs added debug batch file for windows improved project filters for executable: separated into engine and user sources refactored version numbers, added them to the .rc file changed /W2 to /W4 TORQUE_DEBUG,TORQUE_ENABLE_ASSERTS and TORQUE_DEBUG_GFX_MODE now automatically defined in debug mode

--- a/Tools/CMake/CMakeLists.txt
+++ b/Tools/CMake/CMakeLists.txt
@@ -1,5 +1,7 @@
 include(basics.cmake)
 
+setupVersionNumbers()
+
 #the libs
 include(lmng.cmake)
 include(lpng.cmake)
@@ -22,3 +24,5 @@ endif()
 
 # the main engine, should come last
 include(torque3d.cmake)
+
+#setupPackaging()
