Change engine binary name from "notc" to "terminal".

--- a/My Projects/main/buildFiles/config/project.conf
+++ b/My Projects/main/buildFiles/config/project.conf
@@ -12,7 +12,7 @@ $TORQUE_HIFI_NET = false;
 $TORQUE_EXTENDED_MOVE = false;
 
 // Configure Torque 3D
-Torque3D::beginConfig( "win32", "notc" );
+Torque3D::beginConfig( "win32", "terminal" );
 
     // Include Web Deployment module
     includeModule( 'webDeploy' );
