--- a/My Projects/main/buildFiles/config/project.linux.conf
+++ b/My Projects/main/buildFiles/config/project.linux.conf
@@ -12,7 +12,7 @@ $TORQUE_HIFI_NET = false;
 $TORQUE_EXTENDED_MOVE = false;
 
 // Configure Torque 3D
-Torque3D::beginConfig( "linux", "terminal.bin" );
+Torque3D::beginConfig( "linux", "terminal" );
 
     // Include Web Deployment module
     //includeModule( 'webDeploy' );
