Revert php project generator.

--- a/Tools/projectGenerator/libs/WebDeploy.conf
+++ b/Tools/projectGenerator/libs/WebDeploy.conf
@@ -21,7 +21,7 @@
 // IN THE SOFTWARE.
 //-----------------------------------------------------------------------------
 
-if (TorqueGenerator::$platform == "win32")
+if (T3D_Generator::$platform == "win32")
 {
     // Include the web deployment settings
     $webDeployConf = realpath($argv[1])."/buildFiles/config/webDeploy.conf";
@@ -38,14 +38,14 @@ if (TorqueGenerator::$platform == "win32")
 
     beginActiveXConfig( WebDeploymentWindows::$axPluginName, '{CDECDFF9-E125-412E-87CD-2D89DB971CAB}' );
 
-        addProjectDependency( getGameProjectName() . '_DLL' );
+        addProjectDependency( getGameProjectName() . ' DLL' );
 
     endActiveXConfig();
 
 
     beginNPPluginConfig( WebDeploymentWindows::$npPluginName, '{CDECDFF9-E125-412E-87BC-2D89DB971CAB}' );
         
-       addProjectDependency( getGameProjectName() . '_DLL' );
+       addProjectDependency( getGameProjectName() . ' DLL' );
 
     endNPPluginConfig();
     
@@ -55,7 +55,7 @@ if (TorqueGenerator::$platform == "win32")
 
 }
 
-if (TorqueGenerator::$platform == "mac")
+if (T3D_Generator::$platform == "mac")
 {
     // Include the web deployment settings
     $webDeployConf = realpath($argv[1])."/buildFiles/config/webDeploy.mac.conf";
