--- a/Tools/projectGenerator/libs/convexDecomp.conf
+++ b/Tools/projectGenerator/libs/convexDecomp.conf
@@ -29,16 +29,14 @@ beginLibConfig( 'convexDecomp', '{4EF87A4E-16ED-4E64-BF04-841B2675AEE0}' );
    // Additional includes
    addLibIncludePath( 'convexDecomp' );
 
-   if ( TorqueGenerator::$platform == "360" )
+   if ( T3D_Generator::$platform == "360" )
       addProjectDefine( '_XBOX' );  
-   else if ( TorqueGenerator::$platform == "ps3" )
+   else if ( T3D_Generator::$platform == "ps3" )
       addProjectDefine( '__CELLOS_LV2__' );       
-   else if ( TorqueGenerator::$platform == "mac" )
+   else if ( T3D_Generator::$platform == "mac" )
       addProjectDefine( '__APPLE__' );   
-   else if ( TorqueGenerator::$platform == "win32" )
+   else if ( T3D_Generator::$platform == "win32" )
       addProjectDefine( 'WIN32' );
-   else if ( TorqueGenerator::$platform == "linux" )
-      addProjectDefine( 'LINUX' );
 
 endLibConfig();
 
