--- a/Tools/projectGenerator/libs/Torque3D.conf
+++ b/Tools/projectGenerator/libs/Torque3D.conf
@@ -35,7 +35,7 @@ includeLib( 'pcre' );
 includeLib( 'convexDecomp' ); 
 
 // Use FMOD on consoles
-if ( TorqueGenerator::$platform != "360" && TorqueGenerator::$platform != "ps3" )
+if ( T3D_Generator::$platform != "360" && T3D_Generator::$platform != "ps3" )
 {
    includeLib( 'libvorbis' );
    includeLib( 'libogg' );
@@ -43,7 +43,7 @@ if ( TorqueGenerator::$platform != "360" && TorqueGenerator::$platform != "ps3" 
 }
 
 $ext = "DLL";
-if ( TorqueGenerator::$platform == "mac" )
+if ( T3D_Generator::$platform == "mac" )
    $ext = "Bundle";
 
 // We need to pick the right physics engine to include.
@@ -52,7 +52,7 @@ global $PHYSX_SDK_PATH;
 
 //some platforms will not want a shared config
 $useSharedConfig = true;
-if ( TorqueGenerator::$platform == "360" || TorqueGenerator::$platform == "ps3" )
+if ( T3D_Generator::$platform == "360" || T3D_Generator::$platform == "ps3" )
    $useSharedConfig = false;
 
 //begin either a shared lib config, or a static app config
@@ -89,7 +89,7 @@ else
     addLibIncludePath( "squish" );
     addLibIncludePath( "convexDecomp" );
     
-    if ( TorqueGenerator::$platform != "360" && TorqueGenerator::$platform != "ps3" )
+    if ( T3D_Generator::$platform != "360" && T3D_Generator::$platform != "ps3" )
     {
       addLibIncludePath( "libvorbis/include" );
       addLibIncludePath( "libogg/include" );
@@ -107,13 +107,13 @@ else
     includeModule( 'basicLighting' );
     includeModule( 'collada' );
     
-    if ( TorqueGenerator::$platform != "360" && TorqueGenerator::$platform != "ps3" )
+    if ( T3D_Generator::$platform != "360" && T3D_Generator::$platform != "ps3" )
     {
       includeModule( 'vorbis' );
       includeModule( 'theora' );
     }
    
-    if(TorqueGenerator::$platform == "mac" || TorqueGenerator::$platform == "win32")
+    if(T3D_Generator::$platform == "mac" || T3D_Generator::$platform == "win32")
        includeModule( 'openal' );
 
     // Demo functionality
@@ -142,7 +142,7 @@ else
     addProjectDependency( 'pcre' );
     addProjectDependency( 'convexDecomp' );
     
-    if ( TorqueGenerator::$platform != "360" && TorqueGenerator::$platform != "ps3" )
+    if ( T3D_Generator::$platform != "360" && T3D_Generator::$platform != "ps3" )
     {
       addProjectDependency( 'libvorbis' );
       addProjectDependency( 'libogg' );
@@ -162,13 +162,13 @@ else
         addProjectDependency( 'nxuStream' );
     }
     
-    if ( TorqueGenerator::$platform == "mac" )
+    if ( T3D_Generator::$platform == "mac" )
     {    
         addProjectDefine( '__MACOSX__' );
         addProjectDefine( 'LTM_DESC' );
     }
 
-    if (TorqueGenerator::$platform == "win32")
+    if (T3D_Generator::$platform == "win32")
     {
         setProjectModuleDefinitionFile('../../' . getLibSrcDir() . 'Torque3D/msvc/torque3d.def');
 
@@ -193,7 +193,6 @@ else
         addProjectLibInput('shell32.lib');
         addProjectLibInput('oleaut32.lib');
         addProjectLibInput('version.lib');
-		addProjectLibInput('Opengl32.lib');
     }
     
     // Include project specific sources in the project/buildFiles/config/projectCode.conf
@@ -217,13 +216,13 @@ beginSharedAppConfig( getGameProjectName(), '{CDECDFF9-E125-523F-87BC-2D89DB971C
 
 	addEngineSrcDir( 'main' );
     
-    if (TorqueGenerator::$platform == "win32")
+    if (T3D_Generator::$platform == "win32")
     {
         addProjectDefine( 'WIN32' );
-        addProjectDependency( getGameProjectName() . '_DLL' );
+        addProjectDependency( getGameProjectName() . ' DLL' );
     }
 
-    if (TorqueGenerator::$platform == "mac")
+    if (T3D_Generator::$platform == "mac")
     {
         addProjectDefine( '__MACOSX__' );
         addProjectDependency( getGameProjectName() . ' Bundle' );
@@ -234,14 +233,14 @@ endSharedAppConfig();
 }
 
 // Add solution references for Visual Studio projects
-if (TorqueGenerator::$platform == "win32" || TorqueGenerator::$platform == "360" || TorqueGenerator::$platform == "ps3")
+if (T3D_Generator::$platform == "win32" || T3D_Generator::$platform == "360" || T3D_Generator::$platform == "ps3")
 {
 if ( !$useSharedConfig )
    beginSolutionConfig( getGameProjectName(), '{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}' );
    
    addSolutionProjectRef( getGameProjectName() );
    if ( $useSharedConfig )
-      addSolutionProjectRef( getGameProjectName() . '_DLL' );
+      addSolutionProjectRef( getGameProjectName() . ' DLL' );
    addSolutionProjectRef( 'collada_dom' );
    addSolutionProjectRef( 'ljpeg' );
    addSolutionProjectRef( 'lmng' );
@@ -254,7 +253,7 @@ if ( !$useSharedConfig )
    addSolutionProjectRef( 'zlib' );
    addSolutionProjectRef( 'convexDecomp' );
    
-   if (TorqueGenerator::$platform == "win32")
+   if (T3D_Generator::$platform == "win32")
    {
       addSolutionProjectRef( 'libogg' );
       addSolutionProjectRef( 'libvorbis' );
